# technofest2026

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  docker-compose.production.yml  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/src/pixelaid_api/: __init__.py  dependencies.py  main.py  models.py  openapi.py  settings.py
apps/api/src/pixelaid_api/routers/: case_sessions.py  cases.py  livekit.py  me.py  public.py  specialists.py  system.py
apps/api/src/pixelaid_api/services/: case_configs.py  clock.py  consultation_timer.py  feedback.py  gameplay.py  profiles.py  rate_limits.py  seed_data.py  supabase.py
apps/api/tests/: test_db_hardening.py  test_feedback.py  test_gameplay.py  test_health.py
apps/voice-agent/: Dockerfile  README.md  pyproject.toml
apps/voice-agent/src/pixelaid_voice_agent/: __init__.py  api_client.py  config.py  latency.py  main.py  naturalizer.py  openrouter_tts.py  patient_agent.py  session_telemetry.py  tts_factory.py
apps/voice-agent/tests/: test_config.py  test_openrouter_tts.py  test_patient_agent.py  test_session_telemetry.py  test_voice_safety.py
apps/web/: Dockerfile  components.json  next.config.ts  package.json  proxy.ts  tsconfig.json
apps/web/public/: manifest.webmanifest  sw.js
apps/web/scripts/: sync-bgm-version.mjs
apps/web/src/: proxy.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  sw.ts
apps/web/src/app/app/: layout.tsx  page.tsx  smart-entry-client.tsx
apps/web/src/app/auth/: actions.ts
apps/web/src/app/history/: page.tsx
apps/web/src/app/leaderboard/: page.tsx
apps/web/src/app/offline/: page.tsx
apps/web/src/app/profile/: actions.ts  layout.tsx  page.tsx
apps/web/src/components/: app-header.tsx  case-card.tsx  page-shell.tsx
apps/web/src/lib/: use-is-desktop.ts
apps/web/src/lib/api/: server.ts  (+3 more)
docs/: asset-inventory.md  data.json  deployment-dokploy.md  implementation-plan.md  pixelaid_final_prd.md  pixelaid_technical_design_doc.md  pra-development-bootstrap.md
(+170 files in other folders)
