[project]
name = "pixelaid-voice-agent"
version = "0.1.0"
description = "LiveKit Agents Python worker scaffold for PixelAid."
readme = "README.md"
authors = [
    { name = "Vito Andareas Manik", email = "vitoandareas15@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pixelaid-shared",
    "livekit-agents[deepgram,elevenlabs,google,openai,silero,turn-detector]~=1.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
pixelaid-voice-agent = "pixelaid_voice_agent.main:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.uv.sources]
pixelaid-shared = { path = "../../packages/shared-py", editable = true }

[tool.ruff]
line-length = 88

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
